--- a/002.html
+++ b/002.html
@@ -19,7 +19,7 @@
 	<div data-role="header" data-position="fixed"><h1>مناطق نقل حرارية متباينة</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
 	</div><!-- /header -->
 	<div data-role="content">
-	<div class="mikimg"><img src="images/stars.png" class="mikimg" style="max-width: 100%" /></div>
+	<div><img src="images/stars.png" style="max-width:100%"/></div>
 <H1><FONT SIZE=5> مناطق نقل حرارية متباينة</FONT>
 </H1>
 <P><FONT SIZE=4>إن اختلاف كتل مختلف أنواع النجوم التي في مرحلة التسلسل الرئيسي تجعل تركيبها الداخلي مختلفاً بعض الشيء.فنجم منخفض الكتلة (أقل من 0.8 كتلة شمسية) لا يملك طبقة إشعاع (منطقة إشعاع) حيث أن نقل الطاقة من اللب إلى الخارج يتم عبر منطقة النقل الحراري.</p>
