--- a/004.html
+++ b/004.html
@@ -23,8 +23,7 @@
 <a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
 	</div><!-- /header -->
 	<div data-role="content">
-	<div class="mikimg"><img src="images/stars.png" class="mikimg" style="max-width: 100%" /></div>
-
+	<div><img src="images/stars.png" style="max-width:100%"/></div>
 <H1><FONT SIZE=5>التفاعلات النووية داخل النجوم 
 </font>
 </H1>
