--- a/007.html
+++ b/007.html
@@ -19,7 +19,7 @@
 	<div data-role="header" data-position="fixed"><h1>تطور نجم عملاق</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
 	</div><!-- /header -->
 	<div data-role="content">
-	<div class="mikimg"><img src="images/stars.png" class="mikimg" style="max-width: 100%" /></div>
+	<div><img src="images/stars.png" style="max-width:100%"/></div>
 
 <H1><FONT SIZE=5>تطور نجم هائل الكتلة<BR></FONT><FONT SIZE=4>كتلته أكبر من 4 كتل شمسية</FONT></H1>
 <h2><font size=3>مرحلة أولى:(1)</h2></font><p><FONT SIZE=4>
