--- a/intro.html
+++ b/intro.html
@@ -20,7 +20,7 @@
 	<div data-role="header" data-position="fixed"><h1> ما الذي يجعل النجوم تحيا و تندثر؟ </h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
 	</div><!-- /header -->
 	<div data-role="content">
-	<div style="text-align:center;"><img src="images/stars.png" style="max-width:100%"/></div>
+	<div><img src="images/stars.png" style="max-width:100%"/></div>
 
 <H1> ما الذي يجعل النجوم تحيا و تندثر؟ </H1>
 
