--- a/001.html
+++ b/001.html
@@ -22,30 +22,25 @@
 	</div><!-- /header -->
 	<div data-role="content">
 
-	<div style="text-align:center;"><img src="images/stars.png" style="max-width:100%"/></div>
-
+	<div><img src="images/stars.png" style="max-width:100%"/></div>
 <H1><FONT SIZE=5>التوازن الداخلي للنجم <BR></FONT><FONT SIZE=4>The
 Star important balance</FONT><FONT SIZE=5> </FONT>
 </H1>
-<P><FONT SIZE=4>إن قوى الجاذبية تجمع كتلة النجم الغازية و تضغطها باتجاه المركز و عندها يصبح الضغط و درجة الحرارة عاليين لدرجة تكفي لبدء التفاعل النووي.تبدأ في نجوم التسلسل الرئيسي اندماج نوى الهيدروجين (البروتونات) و يحدث توازن بين ضغط الإشعاع المنطلق إلى الخارج مع قوى الجذب الثقالي ليستقر النجم فترة من حياته هي الأطول عموماً في حالة نجم تابع للتسلسل الرئيسي <span dir="ltr">main sequence</span> </FONT>
+<P>إن قوى الجاذبية تجمع كتلة النجم الغازية و تضغطها باتجاه المركز و عندها يصبح الضغط و درجة الحرارة عاليين لدرجة تكفي لبدء التفاعل النووي.تبدأ في نجوم التسلسل الرئيسي اندماج نوى الهيدروجين (البروتونات) و يحدث توازن بين ضغط الإشعاع المنطلق إلى الخارج مع قوى الجذب الثقالي ليستقر النجم فترة من حياته هي الأطول عموماً في حالة نجم تابع للتسلسل الرئيسي <span dir="ltr">main sequence</span>
 </P>
 <P>
 	 	<div class="mikimg"><img src="images/star balance.jpg" class="mikimg" style="max-width:100%"/></div> 
 
-
-<BR><hr>
-<FONT SIZE=4>الموضوع السابق: </FONT>
- <a  href="intro.html" data-icon="refresh" rel="external"> <FONT SIZE=4>ما الذي يجعل النجوم تحيا و تندثر؟<FONT SIZE=4>
-</a>
-<BR />
-الموضوع التالي: </FONT> <a  href="002.html" data-icon="refresh" rel="external"><FONT SIZE=4>مناطق نقل حرارية متباينة</FONT></A>
-<FONT SIZE=4> <BR>العودة إلى </FONT> <a  href="index.html" data-icon="refresh" rel="external"> <FONT SIZE=4>الفهرس</FONT></A>
-
-
 </div><!-- /content -->
 
-<div data-role="footer"  data-position="fixed">
-		<h3>إعداد قتيبة أقرع</h3>
+<div data-role="footer" data-theme="a"  data-position="fixed">
+<div data-role="navbar">
+<ul>
+<li> <a href="intro.html" data-icon="arrow-l" data-iconpos="left" rel="external">مخطط هرتسبرنغ-راسل</a> </li>
+	<li>	<h4> إعداد قتيبة أقرع</h4></li>
+<li><a href="002.html" data-icon="arrow-r" data-iconpos="right" rel="external"> مناطق نقل حرارية متباينة </a></li>
+</ul>
+</div><!--/navbar-->
 	</div><!-- /footer -->
 </div><!-- /page one --> 
 </body>
