--- a/003.html
+++ b/003.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 <!-- عنوان الصفحة -->
 	<title>
-تفاعل اندماج الهيدروجين
+آلية اندماج بروتون-بروتون
                </title> 
 	<link rel="stylesheet" href="css/jquery.mobile-1.3.1.min.css" />
 	<link rel="stylesheet" href="css/theme.css" />
@@ -16,20 +16,20 @@
 <body> 
 <!-- Start of first page: #one -->
 <div data-role="page" id="one" data-theme="b">
-	<div data-role="header" data-position="fixed"><h1>تفاعل اندماج الهيدروجين</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
+	<div data-role="header" data-position="fixed"><h1>آلية اندماج بروتون-بروتون</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
 	</div><!-- /header -->
 	<div data-role="content">
-	<div class="mikimg"><img src="images/stars.png" class="mikimg" style="max-width: 100%" /></div>
+	<div><img src="images/stars.png" style="max-width: 100%" /></div>
 
 <H1><FONT SIZE=5>التفاعلات النووية داخل النجوم 
 </font>
 </H1>
-<P><FONT SIZE=4>يحدث داخل النجوم نوعان رئيسيان من التفاعلات النووية و هي: 
+<P><FONT SIZE=4>يحدث داخل النجوم نوعان رئيسيان من التفاعلات النووية يندمج فيها الهيدروجين لينتج فيها الهليوم بآليتين و هي: 
 <ul><li>
-  تحول الهيدروجين إلى هليوم. </li>
+  آلية اندماج بروتون - بروتون. </li>
 <li><a href="004.html" rel="external"> دورة اندماج كربون - آزوت - أكسجين. </a></li></ul>
 </P>
-<h1>تحول ( اندماج ) الهيدروجين إلى هليوم</h1>
+<h1>آلية اندماج بروتون - بروتون</h1>
 
 <P><FONT SIZE=4>إن تفاعل تحول الهيدروجين إلى هليوم  هو التفاعل النووي الأكثر شيوعاً داخل نجوم التسلسل الرئيسي . هذا التحول يحرر طاقة من داخل نواة الهيدروجين ( البروتون ) . ثلاثة أنوية هيدروجين تتحد لتشكل نواة هليوم و هذه السلسلة من التفاعل الاندماجي هامة جداً لنجوم كتلتها أقل من 1.5 كتلة شمسية من أجل التحول إلى هليوم.إن سلسلة التفاعل هذه تحرر طاقة عالية على شكل أشعة غاما &gamma; و تتحرر كذلك كتلة صغيرة جداً على شكل جسيم نيوترينو &upsilon; </FONT>
 </P>
