--- a/005.html
+++ b/005.html
@@ -18,7 +18,7 @@
 	<div data-role="header" data-position="fixed"><h1>تطور نجم منخفض الكتلة</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
 	</div><!-- /header -->
 	<div data-role="content">
-	<div class="mikimg"><img src="images/stars.png" class="mikimg" style="max-width: 100%" /></div>
+	<div><img src="images/stars.png" style="max-width:100%"/></div>
 
 <H1><FONT SIZE=5>تطور نجم منخفض الكتلة <BR></FONT><FONT SIZE=4>كتلته أقل من 0.8 كتلة شمسية</FONT>
 </H1>
