--- a/006.html
+++ b/006.html
@@ -18,7 +18,7 @@
 	<div data-role="header" data-position="fixed"><h1>تطور نجم شبيه بالشمس</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
 	</div><!-- /header -->
 	<div data-role="content">
-	<div class="mikimg"><img src="images/stars.png" class="mikimg" style="max-width: 100%" /></div>
+	<div><img src="images/stars.png" style="max-width:100%"/></div>
 
 <H1><FONT SIZE=5>تطور نجم شبيه بالشمس<BR></FONT><FONT SIZE=4>كتلته تتراوح بين 0.8 و 4 كتل شمسية</FONT></H1>
 <h2><font size=3>مرحلة أولى:(1)</h2></font><p><FONT SIZE=4>خلال العشرة بلايين سنة التي يقضيها نجم شبيه بالشمس في مرحلة التسلسل الرئيسي فإنه يقوم بصهر الهيدروجين داخل لبّه محولاً إياه إلى هليوم وفق تفاعل بروتون - بروتون. </font>
