--- a/about.html
+++ b/about.html
@@ -28,10 +28,11 @@
 </P>
 <h1>حول المؤلف</h1>
 <p>
-اسمي قتيبة أقرع و من مواليد دمشق و اقطن في مدينة حلب . حائز على شهادة بكالوريوس في الفيزياء و الكيمياء و على دبلوم فيزياء في الكترونيات الجسم الصلب.
+<img src="images/kutaibaa.jpg" class="mikimg" style="max-width:25%; float: left; margin-right: 7px;"/>
+اسمي قتيبة أقرع و من مواليد مدينة دمشق و اقطن في مدينة حلب . حائز على شهادة بكالوريوس في الفيزياء و الكيمياء و على دبلوم فيزياء الكترونيات الجسم الصلب. 
 يحتاج مني الكتابة صفحات عديدة لتفسير سبب حبي و تعلقي بعلم الفلك !! .
 ربما سيكون هذا البرنامج نواة صغيرة لأعمال قادمة متعددة لتبسيط و نشر علم الفلك على الصعيد العربي تحديداً.
-شكراً لاستخدامكم لهذا البرنامج و ارجو ان ينال إعجابكم
+شكراً لاستخدامكم هذا البرنامج و ارجو ان ينال إعجابكم
 <br> 
 قتيبة أقرع
 <br>2 أيلول-سبتمبر 2017
