--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 
 <!-- Start of first page: #one -->
 <div data-role="page" id="one" data-theme="a">
-	<div data-role="header" data-position="fixed"><h1>حياة النجوم</h1>
+	<div data-role="header" data-position="fixed">
+	<div><img src="images/stars.png" style="max-width:100%"/></div>
 	</div><!-- /header -->
 	<div data-role="content">
-	<div><img src="images/stars.png" style="max-width:100%"/></div>
-
 <div class="ui-grid-b ui-responsive">
 <div class="ui-block-a">
 
