--- a/003.html
+++ b/003.html
@@ -16,40 +16,54 @@
 <body> 
 <!-- Start of first page: #one -->
 <div data-role="page" id="one" data-theme="b">
-	<div data-role="header" data-position="fixed"><h1>آلية اندماج بروتون-بروتون</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
-	</div><!-- /header -->
+	<div data-role="panel" data-display="overlay" data-theme="c" data-position="right" id="listpanel">
+	<ul data-inset="true" data-role="listview" data-mini="true" data-iconpos="right" data-filter="false">
+	<li data-role="divider">
+<h2>	"حياة النجوم"</h2></li>
+		<li>
+ <a rel="external" href="intro.html">ما الذي يجعل النجوم  تحيا و تندثر</a></li>
+<li>
+    <a rel="external" href="001.html"> التوازن الداخلي لنجم</a> </li><li>
+<a rel="external" href="002.html"> مناطق نقل حراري متباينة</a> </li><li>
+  <a rel="external" href="003.html">آلية اندماج بروتون-بروتون 
+</a> </li>
+<li>
+  <a rel="external" href="004.html">دورة تفاعل كربون-آزوت-أكسجين </a> </li><li>
+  <a rel="external" href="005.html"> تطور نجم منخفض الكتلة </a> </li><li>
+  <a rel="external" href="006.html"> تطور نجم شبيه بالشمس </a> </li><li>
+ <a rel="external" href="007.html"> تطور نجم هائل الكتلة </a> </li>
+</ul>
+</div><!-- panel -->
+<div data-role="header" data-position="fixed"><h1>آلية اندماج بروتون-بروتون</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
+	<a href="#listpanel" data-icon="bars" rel="external"> المواضيع</a></div><!-- /header -->
 	<div data-role="content">
 	<div><img src="images/stars.png" style="max-width: 100%" /></div>
 
-<H1><FONT SIZE=5>التفاعلات النووية داخل النجوم 
-</font>
+<H1>التفاعلات النووية داخل النجوم 
+
 </H1>
-<P><FONT SIZE=4>يحدث داخل النجوم نوعان رئيسيان من التفاعلات النووية يندمج فيها الهيدروجين لينتج فيها الهليوم بآليتين و هي: 
+<P>يحدث داخل النجوم نوعان رئيسيان من التفاعلات النووية يندمج فيها الهيدروجين لينتج فيها الهليوم بآليتين و هي: 
 <ul><li>
   آلية اندماج بروتون - بروتون. </li>
 <li><a href="004.html" rel="external"> دورة اندماج كربون - آزوت - أكسجين. </a></li></ul>
 </P>
-<h1>آلية اندماج بروتون - بروتون</h1>
 
-<P><FONT SIZE=4>إن تفاعل تحول الهيدروجين إلى هليوم  هو التفاعل النووي الأكثر شيوعاً داخل نجوم التسلسل الرئيسي . هذا التحول يحرر طاقة من داخل نواة الهيدروجين ( البروتون ) . ثلاثة أنوية هيدروجين تتحد لتشكل نواة هليوم و هذه السلسلة من التفاعل الاندماجي هامة جداً لنجوم كتلتها أقل من 1.5 كتلة شمسية من أجل التحول إلى هليوم.إن سلسلة التفاعل هذه تحرر طاقة عالية على شكل أشعة غاما &gamma; و تتحرر كذلك كتلة صغيرة جداً على شكل جسيم نيوترينو &upsilon; </FONT>
+<h1>آلية اندماج بروتون - بروتون</h1>
+<P>إن تفاعل تحول الهيدروجين إلى هليوم  هو التفاعل النووي الأكثر شيوعاً داخل نجوم التسلسل الرئيسي . هذا التحول يحرر طاقة من داخل نواة الهيدروجين ( البروتون ) . ثلاثة أنوية هيدروجين تتحد لتشكل نواة هليوم و هذه السلسلة من التفاعل الاندماجي هامة جداً لنجوم كتلتها أقل من 1.5 كتلة شمسية من أجل التحول إلى هليوم.إن سلسلة التفاعل هذه تحرر طاقة عالية على شكل أشعة غاما &gamma; و تتحرر كذلك كتلة صغيرة جداً على شكل جسيم نيوترينو &upsilon;
 </P>
 
 	 <div class="mikimg"><img src=" images/hydrogen-helium cycle.jpg " class="mikimg" style="max-width: 100%" /></div>
 
-
-<br><hr>
- <FONT SIZE=4>الموضوع السابق: </FONT><A HREF="002.html" data-icon="refresh" rel="external" ><FONT SIZE=4>
-مناطق نقل حراري متباينة</FONT>
-</A><br />
-	<FONT SIZE=4>الموضوع التالي: </FONT><A HREF="004.html" data-icon="refresh" rel="external" ><FONT SIZE=4>
-دورة اندماج آزوت-كربون-أكسجين </FONT>
-</A>
-<FONT SIZE=4> <BR>العودة إلى </FONT><A HREF="index.html" data-icon="refresh" rel="external" ><FONT SIZE=4>الفهرس</FONT></A>
 </div><!-- /content -->
 
-
-<div data-role="footer"  data-position="fixed">
-		<h3>إعداد قتيبة أقرع</h3>
+<div data-role="footer" data-theme="a"  data-position="fixed">
+<div data-role="navbar">
+<ul>
+<li> <a href="002.html" data-icon="arrow-l" data-iconpos="left" rel="external">مناطق نقل حراري متباينة</a> </li>
+	<li>	<h2> إعداد قتيبة أقرع</h2></li>
+<li><a href="004.html" data-icon="arrow-r" data-iconpos="right" rel="external"> دورة اندماج آزوت-كربون-أكسجين </a></li>
+</ul>
+</div><!--/navbar-->
 	</div><!-- /footer -->
 </div><!-- /page one --> 
 </body>
