--- a/006.html
+++ b/006.html
@@ -15,62 +15,75 @@
 <body> 
 <!-- Start of first page: #one -->
 <div data-role="page" id="one" data-theme="b">
-	<div data-role="header" data-position="fixed"><h1>تطور نجم شبيه بالشمس</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
-	</div><!-- /header -->
+	<div data-role="panel" data-display="overlay" data-theme="c" data-position="right" id="listpanel">
+	<ul data-inset="true" data-role="listview" data-mini="true" data-iconpos="right" data-filter="false">
+	<li data-role="divider">
+<h2>	"حياة النجوم"</h2></li>
+		<li>
+ <a rel="external" href="intro.html">ما الذي يجعل النجوم  تحيا و تندثر</a></li>
+<li>
+    <a rel="external" href="001.html"> التوازن الداخلي لنجم</a> </li><li>
+<a rel="external" href="002.html"> مناطق نقل حراري متباينة</a> </li><li>
+  <a rel="external" href="003.html">آلية اندماج بروتون-بروتون 
+</a> </li>
+<li>
+  <a rel="external" href="004.html">دورة تفاعل كربون-آزوت-أكسجين </a> </li><li>
+  <a rel="external" href="005.html"> تطور نجم منخفض الكتلة </a> </li><li>
+  <a rel="external" href="006.html"> تطور نجم شبيه بالشمس </a> </li><li>
+ <a rel="external" href="007.html"> تطور نجم هائل الكتلة </a> </li>
+</ul>
+</div><!-- panel -->
+<div data-role="header" data-position="fixed"><h1>تطور نجم شبيه بالشمس</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
+	<a href="#listpanel" data-icon="bars" rel="external"> المواضيع</a></div><!-- /header -->
 	<div data-role="content">
 	<div><img src="images/stars.png" style="max-width:100%"/></div>
 
-<H1><FONT SIZE=5>تطور نجم شبيه بالشمس<BR></FONT><FONT SIZE=4>كتلته تتراوح بين 0.8 و 4 كتل شمسية</FONT></H1>
-<h2><font size=3>مرحلة أولى:(1)</h2></font><p><FONT SIZE=4>خلال العشرة بلايين سنة التي يقضيها نجم شبيه بالشمس في مرحلة التسلسل الرئيسي فإنه يقوم بصهر الهيدروجين داخل لبّه محولاً إياه إلى هليوم وفق تفاعل بروتون - بروتون. </font>
-<h2><font size=3>مرحلة ثانية:(2)</h2></font><p><FONT SIZE=4>
+<H1>تطور نجم شبيه بالشمس<br><FONT SIZE=4>كتلته تتراوح بين 0.8 و 4 كتل شمسية</FONT></H1>
+<h2>مرحلة أولى:(1)</h2>
+<p>خلال العشرة بلايين سنة التي يقضيها نجم شبيه بالشمس في مرحلة التسلسل الرئيسي فإنه يقوم بصهر الهيدروجين داخل لبّه محولاً إياه إلى هليوم وفق تفاعل بروتون - بروتون.
+<h2>مرحلة ثانية:(2)</h2>
+<p>
 	يتجمع الهليوم داخل لبّ النجم فيما يشكل الهيدروجين 10% فقط من كتلة النجم. يبدأ اللبّ بالتقلص مما يزيد من الضغط و درجة الحرارة و عندها تنطلق بعيداً من داخل اللبّ طبقة من الهيدروجين فيما يعاود النجم صهر الهيدروجين حول اللبّ و تبدأ الطبقات الخارجية للنجم بالتمدد بعيداً فيما يتبرد النجم و يتضخم و يدخل مرحلة تسمى "العملاق الأحمر".
-	</FONT>
 </P>
 <div class="mikimg"><img src=" images/sun like star2.jpg" class="mikimg" style="max-width: 100%" /></div>
-<h2><font size=3>مرحلة ثالثة:(3)</h2></font><p><FONT SIZE=4>
+<h2>مرحلة ثالثة:(3)</h2>
+<p>
 	تستمر عملية الإندماج (تحول الهيدروجين إلى هليوم) داخل لبّ النجم (النواة) و حول النواة في الطبقات المحيطة بلبّ النجم حتى يتحول لبّ النجم إلى هليوم صافي و تصبح درجة الحرارة داخل النواة حرجة بحيث تسمح باندماج ثلاث أنوية هليوم لتشكيل نواة كربون . تدعى هذه المرحلة الحرجة "ومضة الهليوم" helium flash و ذلك لأن اندماج الهليوم يحدث بشكل مفاجئ بالنسبة إلى النجوم ذات الكتلة 2.5 كتلة شمسية. أما النجوم التي تتجاوز هذه العتبة من الكتلة فيحدث الإندماج بشكل متدرج و بما أن نواة الهليوم هي نفسها "جسيم ألفا" في علم الفيزياء الفلكية لذلك تدعى آلية الإندماج هذه "عملية ألفا الثلاثية" Triple-Alpha Process.
-	</FONT>
 </P>
-<h2><font size=3>مرحلة رابعة:(4)</h2></font><p><FONT SIZE=4>
+<h2>مرحلة رابعة:(4)</h2>
+<p>
 	 في هذه المرحلة يندمج الهليوم لتشكيل الكربون داخل النواة و تصبح درجة الحرارة أعلى. مما يجعل النجم يميل بلونه إلى الأزرق فيما لا يزال يحيط بالنواة طبقة من الهيدروجين و يدخل النجم في مرحلة "الفرع الأفقي"Horizontal Branch.
-	</FONT>
 </P>
-<h2><font size=3>مرحلة خامسة:(5)</h2></font><p><FONT SIZE=4>
+<h2>مرحلة خامسة:(5)</h2>
+<p>
 	يصبح الكربون هو المكون الرئيسي للنواة و لكن الحرارة غير كافية لبدء تفاعل اندماج و لكن مع مرور الزمن يمكن لنوى الكربون و الهليوم أن تبدأ بالاندماج لتشكيل نوى الأكسجين، و بعد 0.1 إلى 1 بليون عام يصبح لبّ النجم مكوناً من الكربون و الأكسجين و محاطاً بطبقة من الهليوم و يحيط بالهليوم طبقة من الهيدروجين.
-	</FONT>
 </P>
 <div class="mikimg"><img src=" images/sun like star5.jpg " class="mikimg" style="max-width: 100%" /></div>
-<h2><font size=3>مرحلة سادسة:(6)</h2></font><p><FONT SIZE=4>
+<h2>مرحلة سادسة:(6)</h2>
+<p>
 	بعد أن يتحول معظم الهليوم في النواة إلى كربون تبدأ النواة بالتقلص و ترتفع درجة الحرارة و ذلك قبل أن تتمدد الطبقات الخارجية للنجم و تصبح أكثر برودة. و تدعى هذه المرحلة "فرع العملاق المقارب". بالنسبة لنجم كتلته أقل من 4 كتل شمسية حيث لا يكون ساخناً بمقدار يكفي لبدء اندماج الكربون لذلك تتمدد طبقات النجم بما فيها من الهيدروجين و الهليوم.
-	</FONT>
 </P>
 <div class="mikimg"><img src=" images/Evolution of sun like star.jpg" class="mikimg" style="max-width: 100%" /></div>
-<h2><font size=3>مرحلة سابعة:(7)</h2></font><p><FONT SIZE=4>
+<h2>مرحلة سابعة:(7)</h2>
+<p>
 	يتابع النجم تطوره ليتحول إلى متغيّر من نوع ميرا  <span dir="ltr">Mira Variable</span>  حيث يتغير لمعانه على مدار سنة. و بمرور الزمن عبر 100&nbsp;000 سنة يخسر النجم مادته في الأغلفة الخارجية و يتبقى اللبّ المكون من الكربون - الأكسجين. أما المادة المنتشرة حوله فتشكل منظراً فلكياً جميلاً يدعى "بالسديم الكوكبي".
-	</FONT>
 </P>
 <div class="mikimg"><img src=" images/Evolution of sun like star7.jpg" class="mikimg" style="max-width: 100%" /></div>
-<h2><font size=3>مرحلة ثامنة:(8)</h2></font><p><FONT SIZE=4>
+<h2>مرحلة ثامنة:(8)</h2>
+<p>
 	داخل السديم الكوكبي يتبقى نواة حارة من الكربون و الأكسجين و بعد مئات المليارات من السنين أو ما يزيد، يتبرد القزم الأبيض و ينطفئ.
-	</FONT>
 </P>
-
-
-
-<br><hr>
-	<FONT SIZE=4>الموضوع السابق: </FONT><A HREF="005.html" data-icon="refresh" rel="external" ><FONT SIZE=4>
-تطور نجم منخفض الكتلة</FONT>
-</A><br />
-	<FONT SIZE=4>الموضوع التالي: </FONT><A HREF="007.html" data-icon="refresh" rel="external" ><FONT SIZE=4>
-تطور نجم ضخم</FONT>
-</A>
-<FONT SIZE=4> <BR>العودة إلى </FONT><A HREF="index.html" data-icon="refresh" rel="external" ><FONT SIZE=4>الفهرس</FONT></A><FONT SIZE=4>
-</FONT>
 
 </div><!-- /content -->
 
-<div data-role="footer"  data-position="fixed">
-		<h3>إعداد قتيبة أقرع</h3>
+<div data-role="footer" data-theme="a"  data-position="fixed">
+<div data-role="navbar">
+<ul>
+<li> <a href="005.html" data-icon="arrow-l" data-iconpos="left" rel="external">تطور نجم منخفض الكتلة</a> </li>
+	<li>	<h2> إعداد قتيبة أقرع</h2></li>
+<li><a href="007.html" data-icon="arrow-r" data-iconpos="right" rel="external"> تطور نجم عملاق </a></li>
+</ul>
+</div><!--/navbar-->
 	</div><!-- /footer -->
 </div><!-- /page one --> 
 </body>
