--- a/001.html
+++ b/001.html
@@ -18,17 +18,32 @@
 <body> 
 <!-- Start of first page: #one -->
 <div data-role="page" id="one" data-theme="b">
-	<div data-role="header" data-position="fixed"><h1> التوازن الداخلي للنجم</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
-	</div><!-- /header -->
+	<div data-role="panel" data-display="overlay" data-theme="c" data-position="right" id="listpanel">
+	<ul data-inset="true" data-role="listview" data-mini="true" data-iconpos="right" data-filter="false">
+	<li data-role="divider">
+<h2>	"حياة النجوم"</h2></li>
+		<li>
+ <a rel="external" href="intro.html">ما الذي يجعل النجوم  تحيا و تندثر</a></li>
+<li>
+    <a rel="external" href="001.html"> التوازن الداخلي لنجم</a> </li><li>
+<a rel="external" href="002.html"> مناطق نقل حراري متباينة</a> </li><li>
+  <a rel="external" href="003.html">آلية اندماج بروتون-بروتون 
+</a> </li>
+<li>
+  <a rel="external" href="004.html">دورة تفاعل كربون-آزوت-أكسجين </a> </li><li>
+  <a rel="external" href="005.html"> تطور نجم منخفض الكتلة </a> </li><li>
+  <a rel="external" href="006.html"> تطور نجم شبيه بالشمس </a> </li><li>
+ <a rel="external" href="007.html"> تطور نجم هائل الكتلة </a> </li>
+</ul>
+</div><!-- panel -->
+<div data-role="header" data-position="fixed"><h1> التوازن الداخلي للنجم</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
+	<a href="#listpanel" data-icon="bars" rel="external"> المواضيع</a></div><!-- /header -->
 	<div data-role="content">
 
 	<div><img src="images/stars.png" style="max-width:100%"/></div>
-<H1><FONT SIZE=5>التوازن الداخلي للنجم <BR></FONT><FONT SIZE=4>The
-Star important balance</FONT><FONT SIZE=5> </FONT>
-</H1>
+<h1>التوازن الداخلي للنجم</h1>
 <P>إن قوى الجاذبية تجمع كتلة النجم الغازية و تضغطها باتجاه المركز و عندها يصبح الضغط و درجة الحرارة عاليين لدرجة تكفي لبدء التفاعل النووي.تبدأ في نجوم التسلسل الرئيسي اندماج نوى الهيدروجين (البروتونات) و يحدث توازن بين ضغط الإشعاع المنطلق إلى الخارج مع قوى الجذب الثقالي ليستقر النجم فترة من حياته هي الأطول عموماً في حالة نجم تابع للتسلسل الرئيسي <span dir="ltr">main sequence</span>
 </P>
-<P>
 	 	<div class="mikimg"><img src="images/star balance.jpg" class="mikimg" style="max-width:100%"/></div> 
 
 </div><!-- /content -->
@@ -37,8 +52,8 @@ Star important balance</FONT><FONT SIZE=5> </FONT>
 <div data-role="navbar">
 <ul>
 <li> <a href="intro.html" data-icon="arrow-l" data-iconpos="left" rel="external">مخطط هرتسبرنغ-راسل</a> </li>
-	<li>	<h4> إعداد قتيبة أقرع</h4></li>
-<li><a href="002.html" data-icon="arrow-r" data-iconpos="right" rel="external"> مناطق نقل حرارية متباينة </a></li>
+	<li>	<h2> إعداد قتيبة أقرع</h2></li>
+<li><a href="002.html" data-icon="arrow-r" data-iconpos="right" rel="external"> مناطق نقل حراري متباينة </a></li>
 </ul>
 </div><!--/navbar-->
 	</div><!-- /footer -->
