--- a/002.html
+++ b/002.html
@@ -16,37 +16,51 @@
 <body> 
 <!-- Start of first page: #one -->
 <div data-role="page" id="one" data-theme="b">
+<div data-role="panel" data-display="overlay" data-theme="c" data-position="right" id="listpanel">
+	<ul data-inset="true" data-role="listview" data-mini="true" data-iconpos="right" data-filter="false">
+	<li data-role="divider">
+<h2>	"حياة النجوم"</h2></li>
+		<li>
+ <a rel="external" href="intro.html">ما الذي يجعل النجوم  تحيا و تندثر</a></li>
+<li>
+    <a rel="external" href="001.html"> التوازن الداخلي لنجم</a> </li><li>
+<a rel="external" href="002.html"> مناطق نقل حراري متباينة</a> </li><li>
+  <a rel="external" href="003.html">آلية اندماج بروتون-بروتون 
+</a> </li>
+<li>
+  <a rel="external" href="004.html">دورة تفاعل كربون-آزوت-أكسجين </a> </li><li>
+  <a rel="external" href="005.html"> تطور نجم منخفض الكتلة </a> </li><li>
+  <a rel="external" href="006.html"> تطور نجم شبيه بالشمس </a> </li><li>
+ <a rel="external" href="007.html"> تطور نجم هائل الكتلة </a> </li>
+</ul>
+</div><!-- panel -->
 	<div data-role="header" data-position="fixed"><h1>مناطق نقل حرارية متباينة</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
-	</div><!-- /header -->
+<a href="#listpanel" data-icon="bars" rel="external"> المواضيع</a>	</div><!-- /header -->
 	<div data-role="content">
 	<div><img src="images/stars.png" style="max-width:100%"/></div>
-<H1><FONT SIZE=5> مناطق نقل حرارية متباينة</FONT>
+<H1> مناطق نقل حرارية متباينة
 </H1>
-<P><FONT SIZE=4>إن اختلاف كتل مختلف أنواع النجوم التي في مرحلة التسلسل الرئيسي تجعل تركيبها الداخلي مختلفاً بعض الشيء.فنجم منخفض الكتلة (أقل من 0.8 كتلة شمسية) لا يملك طبقة إشعاع (منطقة إشعاع) حيث أن نقل الطاقة من اللب إلى الخارج يتم عبر منطقة النقل الحراري.</p>
-<P><div class="mikimg"><img src="images/low mass star.jpg" class="mikimg" style="max-width:100%"/></div> 
-</p> و بالنسبة للنجوم الشبيهة بالشمس(كتلتها تتراوح بين 0.8  - 4كتلة شمسية) فإنها تمتلك منطقة نقل حراري تحيط بمنطقة الإشعاع التي تحيط لبّ النجم.
+<P>إن اختلاف كتل مختلف أنواع النجوم التي في مرحلة التسلسل الرئيسي تجعل تركيبها الداخلي مختلفاً بعض الشيء.فنجم منخفض الكتلة (أقل من 0.8 كتلة شمسية) لا يملك طبقة إشعاع (منطقة إشعاع) حيث أن نقل الطاقة من اللب إلى الخارج يتم عبر منطقة النقل الحراري.</p>
+<div class="mikimg"><img src="images/low mass star.jpg" class="mikimg" style="max-width:100%"/></div> 
+<p>
+و بالنسبة للنجوم الشبيهة بالشمس(كتلتها تتراوح بين 0.8  - 4كتلة شمسية) فإنها تمتلك منطقة نقل حراري تحيط بمنطقة الإشعاع التي تحيط لبّ النجم.
 </p>
 
-<P><div class="mikimg"><img src="images/sun like star.jpg" class="mikimg" style="max-width:100%"/></div> 
-</p>
+<div class="mikimg"><img src="images/sun like star.jpg" class="mikimg" style="max-width:100%"/></div> 
 <p>
 و النجوم العملاقة ذات الكتل الكبيرة (أكبر من 4 كتل شمسية) نجد فيها منطقتي الإشعاع و النقل معكوستين أي أن منطقة الإشعاع تحيط بمنطقة النقل الحراري.
-</FONT>
 </P>
-<P><div class="mikimg"><img src="images/massive star.jpg" class="mikimg" style="max-width:100%"/></div> 
-</p>
-
-<br> <hr>
-<FONT SIZE=4>الموضوع السابق: </FONT><A HREF="001.html" data-icon="refresh" rel="external" ><FONT SIZE=4>التوازن الداخلي للنجم</FONT>
-</A><br />
-	<FONT SIZE=4>الموضوع التالي: </FONT><A HREF="003.html" data-icon="refresh" rel="external" ><FONT SIZE=4>
-تفاعل اندماج الهيدروجين</FONT>
-</A>
-<FONT SIZE=4> <BR>العودة إلى </FONT><A HREF="index.html" data-icon="refresh" rel="external" ><FONT SIZE=4>الفهرس</FONT></A>
+<div class="mikimg"><img src="images/massive star.jpg" class="mikimg" style="max-width:100%"/></div>
 
 </div><!-- /content -->
-<div data-role="footer"  data-position="fixed">
-		<h3>إعداد قتيبة أقرع</h3>
+<div data-role="footer" data-theme="a"  data-position="fixed">
+<div data-role="navbar">
+<ul>
+<li> <a href="001.html" data-icon="arrow-l" data-iconpos="left" rel="external">التوازن الداخلي للنجم</a> </li>
+	<li>	<h2> إعداد قتيبة أقرع</h2></li>
+<li><a href="003.html" data-icon="arrow-r" data-iconpos="right" rel="external"> تفاعل بروتون-بروتون </a></li>
+</ul>
+</div><!--/navbar-->
 	</div><!-- /footer -->
 </div><!-- /page one --> 
 </body>
