--- a/004.html
+++ b/004.html
@@ -16,48 +16,61 @@
 <body> 
 <!-- Start of first page: #one -->
 <div data-role="page" id="one" data-theme="b">
-	<div data-role="header" data-position="fixed">
+	<div data-role="panel" data-display="overlay" data-theme="c" data-position="right" id="listpanel">
+	<ul data-inset="true" data-role="listview" data-mini="true" data-iconpos="right" data-filter="false">
+	<li data-role="divider">
+<h2>	"حياة النجوم"</h2></li>
+		<li>
+ <a rel="external" href="intro.html">ما الذي يجعل النجوم  تحيا و تندثر</a></li>
+<li>
+    <a rel="external" href="001.html"> التوازن الداخلي لنجم</a> </li><li>
+<a rel="external" href="002.html"> مناطق نقل حراري متباينة</a> </li><li>
+  <a rel="external" href="003.html">آلية اندماج بروتون-بروتون 
+</a> </li>
+<li>
+  <a rel="external" href="004.html">دورة تفاعل كربون-آزوت-أكسجين </a> </li><li>
+  <a rel="external" href="005.html"> تطور نجم منخفض الكتلة </a> </li><li>
+  <a rel="external" href="006.html"> تطور نجم شبيه بالشمس </a> </li><li>
+ <a rel="external" href="007.html"> تطور نجم هائل الكتلة </a> </li>
+</ul>
+</div><!-- panel -->
+<div data-role="header" data-position="fixed">
 	<h1>
 دورة اندماج آزوت-كربون-أكسجين
  </h1>
 <a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
-	</div><!-- /header -->
+	<a href="#listpanel" data-icon="bars" rel="external"> المواضيع</a></div><!-- /header -->
 	<div data-role="content">
 	<div><img src="images/stars.png" style="max-width:100%"/></div>
-<H1><FONT SIZE=5>التفاعلات النووية داخل النجوم 
-</font>
+<H1>التفاعلات النووية داخل النجوم 
 </H1>
-<P><FONT SIZE=4>يحدث داخل النجوم نوعان رئيسيان من التفاعلات النووية و هي: 
-<ul><li> <a href="003.html" rel="external">
-  تحول الهيدروجين إلى هليوم</a>. </li>
-<li> دورة اندماج كربون - آزوت - أكسجين. </li></ul>
+<P>يحدث داخل النجوم نوعان رئيسيان من التفاعلات النووية يندمج فيها الهيدروجين لينتج فيها الهليوم بآليتين و هي: 
+<ul><li><a href="003.html" rel="external">
+  آلية اندماج بروتون - بروتون.
+ </a></li>
+<li> دورة اندماج كربون - آزوت - أكسجين.</li></ul>
 </P>
-<H1><FONT SIZE=5>
-دورة اندماج آزوت-كربون-أكسجين <BR></FONT><FONT SIZE=4>CNO Cycle</FONT>
-</H1>
 
-<P><FONT SIZE=4>تحدث دورة CNO داخل النجوم الضخمة في مرحلة التسلسل الرئيسي. و يكون فيها لبّ النجم أسخن بكثير من لبّ الشمس حيث تندمج أربع نوى هيدروجين لينتج نواة هليوم و لكن بمساعدة نظائر الكربون و الآزوت و الأكسجين. سلسلة التفاعل هذه و التي تدعى دورة CNO هي التي تحكم التفاعلات داخل لبّ النجوم التي كتلتها أكبر من 1.5 كتلة شمسية.
-</font></p>
+<H1>دورة اندماج آزوت-كربون-أكسجين
+ <br>CNO Cycle</H1>
+
+<P>تحدث دورة CNO داخل النجوم الضخمة في مرحلة التسلسل الرئيسي. و يكون فيها لبّ النجم أسخن بكثير من لبّ الشمس حيث تندمج أربع نوى هيدروجين لينتج نواة هليوم و لكن بمساعدة نظائر الكربون و الآزوت و الأكسجين. سلسلة التفاعل هذه و التي تدعى دورة CNO هي التي تحكم التفاعلات داخل لبّ النجوم التي كتلتها أكبر من 1.5 كتلة شمسية.
+</p>
  <div class="mikimg"><img src=" images/cno cycle.jpg " class="mikimg" style="max-width: 100%" /></div>
 
-<P><FONT SIZE=4>نلاحظ في هذه الدورة مشاركة أربع نوى هيدروجين لتنتج نواة هليوم ضمن سلسلة التفاعل التي يدخل فيها نظائر الكربون و النتروجين و الأكسجين. و يدخل الكربون في السلسلة كوسيط تفاعل و يخرج و يحافظ على عدده دون زيادة أو نقصان. </FONT>
+<P>نلاحظ في هذه الدورة مشاركة أربع نوى هيدروجين لتنتج نواة هليوم ضمن سلسلة التفاعل التي يدخل فيها نظائر الكربون و النتروجين و الأكسجين. و يدخل الكربون في السلسلة كوسيط تفاعل و يخرج و يحافظ على عدده دون زيادة أو نقصان.
 </P>
-
-
-<br><hr>
-<FONT SIZE=4>الموضوع السابق: </FONT><A HREF="003.html" data-icon="refresh" rel="external" ><FONT SIZE=4>
-تفاعل اندماج الهيدروجين</FONT>
-</A><br />
-	<FONT SIZE=4>الموضوع التالي: </FONT><A HREF="005.html" data-icon="refresh" rel="external" ><FONT SIZE=4>
-تطور نجم منخفض الكتلة </FONT>
-</A>
-<FONT SIZE=4> <BR>العودة إلى </FONT><A HREF="index.html" data-icon="refresh" rel="external" ><FONT SIZE=4>الفهرس</FONT></A><FONT SIZE=4>
-</FONT>
 
 </div><!-- /content -->
 
-<div data-role="footer"  data-position="fixed">
-		<h3>إعداد قتيبة أقرع</h3>
+<div data-role="footer" data-theme="a"  data-position="fixed">
+<div data-role="navbar">
+<ul>
+<li> <a href="003.html" data-icon="arrow-l" data-iconpos="left" rel="external">تفاعل بروتون-بروتون</a> </li>
+	<li>	<h2> إعداد قتيبة أقرع</h2></li>
+<li><a href="005.html" data-icon="arrow-r" data-iconpos="right" rel="external"> تطور نجم منخفض الكتلة </a></li>
+</ul>
+</div><!--/navbar-->
 	</div><!-- /footer -->
 </div><!-- /page one --> 
 </body>
