--- a/005.html
+++ b/005.html
@@ -15,33 +15,49 @@
 <body> 
 <!-- Start of first page: #one -->
 <div data-role="page" id="one" data-theme="b">
-	<div data-role="header" data-position="fixed"><h1>تطور نجم منخفض الكتلة</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
-	</div><!-- /header -->
+	<div data-role="panel" data-display="overlay" data-theme="c" data-position="right" id="listpanel">
+	<ul data-inset="true" data-role="listview" data-mini="true" data-iconpos="right" data-filter="false">
+	<li data-role="divider">
+<h2>	"حياة النجوم"</h2></li>
+		<li>
+ <a rel="external" href="intro.html">ما الذي يجعل النجوم  تحيا و تندثر</a></li>
+<li>
+    <a rel="external" href="001.html"> التوازن الداخلي لنجم</a> </li><li>
+<a rel="external" href="002.html"> مناطق نقل حراري متباينة</a> </li><li>
+  <a rel="external" href="003.html">آلية اندماج بروتون-بروتون 
+</a> </li>
+<li>
+  <a rel="external" href="004.html">دورة تفاعل كربون-آزوت-أكسجين </a> </li><li>
+  <a rel="external" href="005.html"> تطور نجم منخفض الكتلة </a> </li><li>
+  <a rel="external" href="006.html"> تطور نجم شبيه بالشمس </a> </li><li>
+ <a rel="external" href="007.html"> تطور نجم هائل الكتلة </a> </li>
+</ul>
+</div><!-- panel -->
+<div data-role="header" data-position="fixed"><h1>تطور نجم منخفض الكتلة</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
+	<a href="#listpanel" data-icon="bars" rel="external"> المواضيع</a></div><!-- /header -->
 	<div data-role="content">
 	<div><img src="images/stars.png" style="max-width:100%"/></div>
 
-<H1><FONT SIZE=5>تطور نجم منخفض الكتلة <BR></FONT><FONT SIZE=4>كتلته أقل من 0.8 كتلة شمسية</FONT>
+<H1>تطور نجم منخفض الكتلة <BR><FONT SIZE=4>كتلته أقل من 0.8 كتلة شمسية</FONT>
 </H1>
 
-<h2><font size=3>مرحلة أولى:</h2></font>
-<p><FONT SIZE=4>إن نجماً ذو كتلة تبلغ 0.4 كتلة شمسية يبدأ كباقي النجوم في مرحلة التسلسل الرئيسي و يقوم بصهر الهيدروجين و تحويله إلى هليوم داخل لبّه. و يحدث النقل الحراري على كامل النجم أي أن منطقة النقل (الحمل) الحراري تنتشر على كامل النجم.</font></p>
+<h2>مرحلة أولى:</h2>
+<p>إن نجماً ذو كتلة تبلغ 0.4 كتلة شمسية يبدأ كباقي النجوم في مرحلة التسلسل الرئيسي و يقوم بصهر الهيدروجين و تحويله إلى هليوم داخل لبّه. و يحدث النقل الحراري على كامل النجم أي أن منطقة النقل (الحمل) الحراري تنتشر على كامل النجم.</p>
 <div class="mikimg"><img src=" images/low mass star1.jpg" class="mikimg" style="max-width: 100%" /></div>
- <h2><font size=3>مرحلة ثانية:</font></h2><p><font size=4>يستهلك النجم كامل الهيدروجين بعد 1 ترليون سنة و يتباطئ بعدها الاندماج النووي مما يتسبب في انخفاض معدل الطاقة المحررة و يمنح قوى الجاذبية القدرة على ضغط الطبقات الخارجية باتجاه لبّ النجم. و على عكس النجوم العملاقة فإن درجة حرارة لبّ النجم تصبح غير قادرة على دمج المزيد من الهيدروجين و تحويله إلى هليوم. عند تلك المرحلة يتقلص النجم ببطئ و يبرد و ينطفئ و يتحول إلى نجم بارد يدعى قزماً أسوداً.</font></p>
+ <h2>مرحلة ثانية:</h2>
+<p>يستهلك النجم كامل الهيدروجين بعد 1 ترليون سنة و يتباطئ بعدها الاندماج النووي مما يتسبب في انخفاض معدل الطاقة المحررة و يمنح قوى الجاذبية القدرة على ضغط الطبقات الخارجية باتجاه لبّ النجم. و على عكس النجوم العملاقة فإن درجة حرارة لبّ النجم تصبح غير قادرة على دمج المزيد من الهيدروجين و تحويله إلى هليوم. عند تلك المرحلة يتقلص النجم ببطئ و يبرد و ينطفئ و يتحول إلى نجم بارد يدعى قزماً أسوداً.</p>
 <div class="mikimg"><img src="images/Evolution of low mass star.jpg" class="mikimg" style="max-width: 100%" /></div>
- <br><hr>
- 	<FONT SIZE=4>الموضوع السابق: </FONT><A HREF="004.html" data-icon="refresh" rel="external" ><FONT SIZE=4>
-دورة اندماج آزوت-كربون-أكسجين</FONT>
-</A><br />
-	<FONT SIZE=4>الموضوع التالي: </FONT><A HREF="006.html" data-icon="refresh" rel="external" ><FONT SIZE=4>
-تطور نجم شبيه بالشمس</FONT>
-</A>
-<FONT SIZE=4> <BR>العودة إلى </FONT><A HREF="index.html" data-icon="refresh" rel="external" ><FONT SIZE=4>الفهرس</FONT></A><FONT SIZE=4>
-</FONT>
 
 </div><!-- /content -->
 
-<div data-role="footer"  data-position="fixed">
-		<h3>إعداد قتيبة أقرع</h3>
+<div data-role="footer" data-theme="a"  data-position="fixed">
+<div data-role="navbar">
+<ul>
+<li> <a href="004.html" data-icon="arrow-l" data-iconpos="left" rel="external">دورة اندماج آزوت-كربون-أكسجين</a> </li>
+	<li>	<h2> إعداد قتيبة أقرع</h2></li>
+<li><a href="006.html" data-icon="arrow-r" data-iconpos="right" rel="external"> تطور نجم شبيه بالشمس </a></li>
+</ul>
+</div><!--/navbar-->
 	</div><!-- /footer -->
 </div><!-- /page one --> 
 </body>
