--- a/007.html
+++ b/007.html
@@ -16,60 +16,75 @@
 <body> 
 <!-- Start of first page: #one -->
 <div data-role="page" id="one" data-theme="b">
-	<div data-role="header" data-position="fixed"><h1>تطور نجم عملاق</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
-	</div><!-- /header -->
+	<div data-role="panel" data-display="overlay" data-theme="c" data-position="right" id="listpanel">
+	<ul data-inset="true" data-role="listview" data-mini="true" data-iconpos="right" data-filter="false">
+	<li data-role="divider">
+<h2>	"حياة النجوم"</h2></li>
+		<li>
+ <a rel="external" href="intro.html">ما الذي يجعل النجوم  تحيا و تندثر</a></li>
+<li>
+    <a rel="external" href="001.html"> التوازن الداخلي لنجم</a> </li><li>
+<a rel="external" href="002.html"> مناطق نقل حراري متباينة</a> </li><li>
+  <a rel="external" href="003.html">آلية اندماج بروتون-بروتون 
+</a> </li>
+<li>
+  <a rel="external" href="004.html">دورة تفاعل كربون-آزوت-أكسجين </a> </li><li>
+  <a rel="external" href="005.html"> تطور نجم منخفض الكتلة </a> </li><li>
+  <a rel="external" href="006.html"> تطور نجم شبيه بالشمس </a> </li><li>
+ <a rel="external" href="007.html"> تطور نجم هائل الكتلة </a> </li>
+</ul>
+</div><!-- panel -->
+<div data-role="header" data-position="fixed"><h1>تطور نجم عملاق</h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
+	<a href="#listpanel" data-icon="bars" rel="external"> المواضيع</a></div><!-- /header -->
 	<div data-role="content">
 	<div><img src="images/stars.png" style="max-width:100%"/></div>
 
-<H1><FONT SIZE=5>تطور نجم هائل الكتلة<BR></FONT><FONT SIZE=4>كتلته أكبر من 4 كتل شمسية</FONT></H1>
-<h2><font size=3>مرحلة أولى:(1)</h2></font><p><FONT SIZE=4>
+<H1>تطور نجم هائل الكتلة<BR><FONT SIZE=4>كتلته أكبر من 4 كتل شمسية</FONT></H1>
+<h2>مرحلة أولى:(1)</h2><p>
 	تستغرق النجوم ذات الكتلة الأكبر من 4 كتل شمسية مسيرتها في مرحلة التسلسل الرئيسي ما بين 10 إلى 100 مليون سنة. حيث تحرق الهيدروجين و تحوله إلى هليوم. ففي الوقت الذي يتحول فيه الهيدروجين إلى هليوم في النجوم المنخفضة الكتلة وفق <a href="003.html" rel="external"> تفاعل بروتون-بروتون </a>، فإن النجوم الضخمة تقوم بدمج الهيدروجين وفق آلية تفاعل نووي مختلفة تدعى <a href="004.html" rel="external">" دورة اندماج كربون - آزوت - أكسجين" </a>
 	  أو ما يدعى <a href="004.html" rel="external">
 	<span dir="ltr"> CNO Cycle</span></a>.
-	</font></p>
-	 <h2><font size=3>مرحلة ثانية:(2)</h2></font><p><FONT SIZE=4>
+</p>
+	 <h2>مرحلة ثانية:(2)</h2><p>
 	يتقلص لبّ النجم (النواة) بعد توقف عملية دمج الهيدروجين و تتشكل طبقة خارجية من الهيدروجين تبدأ بالتمدد و يصبح النجم "عملاقاً أحمراً فائقاً".
-	</font></p>
-	 <h2><font size=3>مرحلة ثالثة:(3)</h2></font><p><FONT SIZE=4>
+	</p>
+	 <h2>مرحلة ثالثة:(3)</h2><p>
 	ترتفع درجة حرارة النواة مما يؤدي إلى بدء اندماج الهليوم لتشكيل الكربون ثم يندمج الكربون و الهليوم لتشكيل الأكسجين و يستمر احتراق الهيدروجين في الغلاف الخارجي و يصبح النجم أكثر سخونة و يتحول إلى "عملاق أزرق فائق".
-	</font></p>
-	 <h2><font size=3>مرحلة رابعة:(4)</h2></font><p><FONT SIZE=4>
+	</p>
+	 <h2>مرحلة رابعة:(4)</h2><p>
 	يبدأ الهليوم بالنضوب داخل النواة و بالتالي تبدأ النواة بالتقلص من جديد مما يؤدي إلى ارتفاع الحرارة في النواة من جديد و بدء الاندماج و بالتالي المزيد من الطاقة المتحررة مما يدفع بالطبقات الخارجية بعيداً و يتمدد النجم و يتبرد و يصبح "عملاقاً أحمراً فائقاً" من جديد.
-	</font></p>
-	 <h2><font size=3>مرحلة خامسة:(5)</h2></font><p><FONT SIZE=4>
+	</p>
+	 <h2>مرحلة خامسة:(5)</h2><p>
 	تصل درجة الحرارة داخل النواة إلى درجة كافية لبدء صهر الكربون مما يسمح بتفاعلات متعددة تفضي إلى تشكل الأكسجين و النيون و المغنيزيوم. هذه النوى المختلفة للعناصر تتشكل داخل النواة.
-	</font></p>
+	</p>
 	 <div class="mikimg"><img src=" images/Massive star5.jpg " class="mikimg" style="max-width: 100%" /></div>
-	 <h2><font size=3>مرحلة سادسة:(6)</h2></font><p><FONT SIZE=4>
+	 <h2>مرحلة سادسة:(6)</h2><p>
 	يستغرق انصهار الكربون ما يقارب 1000 سنة قبل أن يتوقف. و في النجوم التي تبلغ كتلتها أقل من 8 كتل شمسية يتقلص لبّ النجم (تتقلص نواة النجم) المكوّنة من الأكسجين و النيون و المغنيزيوم ، لكن درجة الحرارة ليست كافية للبدء بتفاعل اندماج جديد. و ذلك يؤدي إلى خسارة النجم للطبقات الخارجية له على شكل "سديم كوكبي" و يتبقى من النجم نواته فقط.
-	</font></p>
-	 <h2><font size=3>مرحلة سابعة:(7)</h2></font><p><FONT SIZE=4>
+	</p>
+	 <h2>مرحلة سابعة:(7)</h2><p>
 	بمرور الزمن تتبرد نواة النجم المتبقية و ينطفئ النجم بعد أن تحول إلى "قزم أبيض".
-	</font></p>
+	</p>
 	 <div class="mikimg"><img src=" images/Evolution of Massive star.jpg " class="mikimg" style="max-width: 100%" /></div>
-	 <h2><font size=3>مرحلة ثامنة:(8)</h2></font><p><FONT SIZE=4>
+	 <h2>مرحلة ثامنة:(8)</h2><p>
 	بالنسبة للنجوم ذات الكتلة الأكبر من 8 كتل شمسية، تتولد طاقة حرارية كافية لبدء تفاعل اندماج داخل النواة لتشكيل عناصر جديدة. و عبر عدة عقود تتحول النواة إلى نواة من السيلكون ثم تتحول إلى نواة مؤلفة من النيكل و الحديد و يصبح النجم متعدد الطبقات تحوي هذه الطبقات عناصر مختلفة و تكون بنية النجم شبيهة ببنية البصلة.
-	</font></p>
+	</p>
 	 <div class="mikimg"><img src=" images/Massive star8.jpg " class="mikimg" style="max-width: 100%" /></div>
-	 <h2><font size=3>مرحلة تاسعة:(9)</h2></font><p><FONT SIZE=4>
+	 <h2>مرحلة تاسعة:(9)</h2><p>
 	إن الحديد المتشكل داخل النواة يعتبر من أكثر العناصر كثافة و الذي تتوقف عنده عمليات الاندماج لعدم توفر الطاقة اللازمة لعمليات الاندماج لنوى الحديد و في هذه الحالة يبدأ لبّ النجم بالتقلص من جديد تحت تأثير الجاذبية و تبدأ عندها درجة الحرارة بالارتفاع من جديد و تكون عملية التقلص هذه عنيفة و اشبه ما تكون بانهيار عنيف نحو الداخل مما يؤدي إلى انفجار النجم فيما يدعى "نجماً متجدداً" أو "سوبرنوفا".
-	</font></p>
+	</p>
 
 <div class="mikimg"><img src=" images/Super nova.jpg " class="mikimg" style="max-width: 100%" /></div>
 
-
-<br><hr>
- <FONT SIZE=4>الموضوع السابق: </FONT><A HREF="006.html" data-icon="refresh" rel="external" ><FONT SIZE=4>
-تطور نجم شبيه بالشمس</FONT>
-</A><br />
-	
-<FONT SIZE=4> <BR>العودة إلى </FONT><A HREF="index.html" data-icon="refresh" rel="external" ><FONT SIZE=4>الفهرس</FONT></A><FONT SIZE=4>
-</FONT>
-
 </div><!-- /content -->
 
-<div data-role="footer"  data-position="fixed">
-		<h3>إعداد قتيبة أقرع</h3>
+<div data-role="footer" data-theme="a"  data-position="fixed">
+<div data-role="navbar">
+<ul>
+<li> <a href="006.html" data-icon="arrow-l" data-iconpos="left" rel="external">تطور نجم شبيه بالشمس</a> </li>
+	<li>	<h2> إعداد قتيبة أقرع</h2></li>
+<li><a href="about.html" data-icon="arrow-r" data-iconpos="right" rel="external"> حول البرنامج </a></li>
+</ul>
+</div><!--/navbar-->
 	</div><!-- /footer -->
 </div><!-- /page one --> 
 </body>
