--- a/intro.html
+++ b/intro.html
@@ -20,7 +20,7 @@
 <div data-role="panel" data-display="overlay" data-theme="c" data-position="right" id="listpanel">
 	<ul data-inset="true" data-role="listview" data-mini="true" data-iconpos="right" data-filter="false">
 	<li data-role="divider">
-<h4>	"حياة النجوم"</h4></li>
+<h2>	"حياة النجوم"</h2></li>
 		<li>
  <a rel="external" href="intro.html">ما الذي يجعل النجوم  تحيا و تندثر</a></li>
 <li>
@@ -35,33 +35,35 @@
  <a rel="external" href="007.html"> تطور نجم هائل الكتلة </a> </li>
 </ul>
 </div><!-- panel -->
-	<div data-role="header" data-position="fixed"><h1> ما الذي يجعل النجوم تحيا و تندثر؟ </h1><a  href="index.html" data-icon="refresh" rel="external">الفهرس</a>
-<a  href="#listpanel" data-icon="bars" rel="external"> المواضيع</a>
+	<div data-role="header" data-position="fixed"><h1> ما الذي يجعل النجوم تحيا و تندثر؟ </h1>
+<a href="index.html" data-icon="refresh" rel="external">الفهرس</a>
+<a href="#listpanel" data-icon="bars" rel="external"> المواضيع</a>
 	</div><!-- /header -->
 	<div data-role="content">
 	<div><img src="images/stars.png" style="max-width:100%"/></div>
 
 <H1> ما الذي يجعل النجوم تحيا و تندثر؟ </H1>
 
-<P><FONT SIZE=4>في داخل النجوم هناك بيئة فوضوية و طاقة عالية تحدد طبيعة هذه النجوم و ما هي عليه الآن. عندما ننظر في سماء الليل نستطيع رؤية عشرات الآلاف من الكتل الغازية المشتعلة ، إحدى هذه النقاط اللامعة في السماء يمكن أن تكون بضعف حجم الشمس و ربما 80 ضعف من حجم الشمس، داخل هذه النقطة تحدث تفاعلات نووية يعتقد أنها هي ما يغذي الطاقة داخل هذا النجم مما يسمح لنا من رؤية النجم على بعد مئات السنوات الضوئية بعيداً. </FONT>
+<p>في داخل النجوم هناك بيئة فوضوية و طاقة عالية تحدد طبيعة هذه النجوم و ما هي عليه الآن. عندما ننظر في سماء الليل نستطيع رؤية عشرات الآلاف من الكتل الغازية المشتعلة ، إحدى هذه النقاط اللامعة في السماء يمكن أن تكون بضعف حجم الشمس و ربما 80 ضعف من حجم الشمس، داخل هذه النقطة تحدث تفاعلات نووية يعتقد أنها هي ما يغذي الطاقة داخل هذا النجم مما يسمح لنا من رؤية النجم على بعد مئات السنوات الضوئية بعيداً. 
 </P> 
-<P><FONT SIZE=4>ما الذي يجعل مثل هذه الكتل الهائلة متماسكة ؟ . و كيف لهذا المقدار الهائل من الطاقة أن يظل مستقراً دون أن يتسبب في دمار و تفتت هذه الكتل الضخمة. على مدى القرن المنصرم تعلّم الفلكيون كماً هائلاً من المعرفة حول النجوم. لقد تم جمع أجزاء الأحجية المتعلقة بحياة النجوم لمعرفة ما يحدث. و بالنظر إلى المراحل المختلفة لحياة النجوم، بيّن الباحثون أن كتلة النجم هي من الأهمية بمكان كبير لمعرفة كل شيء عن النجم بدءاً من حرارة لبّه إلى معرفة عمره و كم من الزمن سيعيش و كيف و متى سيموت.</FONT> 
+<p>ما الذي يجعل مثل هذه الكتل الهائلة متماسكة ؟ . و كيف لهذا المقدار الهائل من الطاقة أن يظل مستقراً دون أن يتسبب في دمار و تفتت هذه الكتل الضخمة. على مدى القرن المنصرم تعلّم الفلكيون كماً هائلاً من المعرفة حول النجوم. لقد تم جمع أجزاء الأحجية المتعلقة بحياة النجوم لمعرفة ما يحدث. و بالنظر إلى المراحل المختلفة لحياة النجوم، بيّن الباحثون أن كتلة النجم هي من الأهمية بمكان كبير لمعرفة كل شيء عن النجم بدءاً من حرارة لبّه إلى معرفة عمره و كم من الزمن سيعيش و كيف و متى سيموت. 
 </P>
-<P><FONT SIZE=4>إن نجماً شبيهاً بالشمس و نجماً يبلغ عشرة أضعاف كتلة الشمس ربما يمتلكان تشابهاً في فترة نضوجهما و لكن لن يكونا متشابهين في مراحل متقدمة من حياتهما. و يطرح التساؤل التالي حول ما الذي يجعل بعض النجوم تنهي حياتها في انفجار هائل فيما البعض الآخر ينثر غلافه الخارجي بعيداُ عنه في الفضاء.</font></p>
+<p>إن نجماً شبيهاً بالشمس و نجماً يبلغ عشرة أضعاف كتلة الشمس ربما يمتلكان تشابهاً في فترة نضوجهما و لكن لن يكونا متشابهين في مراحل متقدمة من حياتهما. و يطرح التساؤل التالي حول ما الذي يجعل بعض النجوم تنهي حياتها في انفجار هائل فيما البعض الآخر ينثر غلافه الخارجي بعيداُ عنه في الفضاء.</p>
 <h1>مخطط هرتزسبرنغ - راسل</h1>
-<P><FONT SIZE=4>يعد مخطط هرتزسبرنغ - راسل من الأدوات الأساسية فيما يتعلق بفهم تطور النجوم . و في هذا المخطط يقوم الفلكيون برسم النجوم بحسب ضيائيتها و درجة حرارة سطحها . و تتعلق درجة حرارة النجم بلونه فالنجوم الأبرد هي نجوم حمراء اللون بينما تميل النجوم الأكثر سخونة نحو اللون الأزرق.</font></p>
-<P> <div class="mikimg"><img src=" images/Hertizprung-Russel diagram .jpg " class="mikimg" style="max-width: 100%" /></div>
-</p>
-<P><FONT SIZE=4>سنلاحظ أيضاً بأن النجوم الأكثر ضيائية تميل لأن تكون أكبر حجماُ و ذلك لأن ضيائية النجم تتعلق بشكل جزئي بمساحة سطح النجم. و خلال الفترة المستقرة الطويلة من حياة نجم، يقوم بصهر (دمج) الهيدروجين و تحويله إلى هليوم. عملية الصهر هذه هي الآلية التي تغذي النشاط النجمي. و خلال وجود النجم في مرحلة صهر الهيدروجين، يتوضع النجم ضمن منطقة "نجوم التسلسل الرئيسي" في مخطط هرتزسبرنغ- راسل.</font></p>
-<br><hr>
-<FONT SIZE=4>الموضوع التالي: </FONT><A HREF="001.html" data-icon="refresh" rel="external" ><FONT SIZE=4>
-التوازن الداخلي للنجم</FONT></A><FONT SIZE=4> <BR>العودة إلى </FONT><A HREF="index.html" data-icon="refresh" rel="external" ><FONT SIZE=4>الفهرس</FONT></A><FONT SIZE=4>
-</FONT>
+<p>يعد مخطط هرتزسبرنغ - راسل من الأدوات الأساسية فيما يتعلق بفهم تطور النجوم . و في هذا المخطط يقوم الفلكيون برسم النجوم بحسب ضيائيتها و درجة حرارة سطحها . و تتعلق درجة حرارة النجم بلونه فالنجوم الأبرد هي نجوم حمراء اللون بينما تميل النجوم الأكثر سخونة نحو اللون الأزرق.</p>
+ <div class="mikimg"><img src=" images/Hertizprung-Russel diagram .jpg " class="mikimg" style="max-width: 100%" /></div>
+<p>سنلاحظ أيضاً بأن النجوم الأكثر ضيائية تميل لأن تكون أكبر حجماُ و ذلك لأن ضيائية النجم تتعلق بشكل جزئي بمساحة سطح النجم. و خلال الفترة المستقرة الطويلة من حياة نجم، يقوم بصهر (دمج) الهيدروجين و تحويله إلى هليوم. عملية الصهر هذه هي الآلية التي تغذي النشاط النجمي. و خلال وجود النجم في مرحلة صهر الهيدروجين، يتوضع النجم ضمن منطقة "نجوم التسلسل الرئيسي" في مخطط هرتزسبرنغ- راسل.</p>
 
 </div><!-- /content -->
 
-<div data-role="footer"  data-position="fixed">
-		<h3>إعداد قتيبة أقرع</h3>
+<div data-role="footer" data-theme="a"  data-position="fixed">
+<div data-role="navbar">
+<ul>
+<li> <a href="index.html" data-icon="arrow-l" data-iconpos="left" rel="external">الفهرس</a> </li>
+	<li>	<h2> إعداد قتيبة أقرع</h2></li>
+<li><a href="001.html" data-icon="arrow-r" data-iconpos="right" rel="external"> التوازن الداخلي للنجم </a></li>
+</ul>
+</div><!--/navbar-->
 	</div><!-- /footer -->
 </div><!-- /page one --> 
 </body>
